// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder should render a default component 1`] = `
<h2
  className="notice deprecation"
>
  Deprecation Notice
  <p
    className="paragraph"
  />
</h2>
`;

exports[`Placeholder should render a deprecation notice with text 1`] = `
<h2
  className="notice deprecation"
>
  Deprecation Notice
  <p
    className="paragraph"
  >
    notice text
  </p>
</h2>
`;
